[BASE-55] Use ProcessBuilder with automatic stream handling